# ezplace-web

./: .gitignore  README.md
backend/: Cargo.toml
backend/src/: ctx.rs  error.rs  handlers.rs  log.rs  main.rs  model.rs  models.rs  routes.rs
backend/src/unused/: handlers.rs
backend/src/web/: minecraft_query.rs  mod.rs  mw_auth.rs  routes_handlers.rs  routes_login.rs  routes_static.rs  routes_tickets.rs
backend/templates/: login_error.html  login_form.html  logout.html  server_stats.html  server_stats_error.html  user_profile.html
frontend/: index.html
frontend/assets/images/: announcements.avif
frontend/css/: styles.css
frontend/js/: main.js
tests/: Cargo.toml
tests/src/: main.rs
