[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
async-session = "3.0.0"
axum = "0.8.1"
axum-sessions = "0.5.0"
rand = "0.8.5"
reqwest = { version = "0.12.14", features = ["json"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tera = "1.20.0"
tokio = { version = "1.44.0", features = ["full"] }
tower-cookies = "0.10.0"
tower-http = { version = "0.6.2", features = ["cors","fs"] }


