[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
# Async
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"

# Serde
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_with = "3"

# Web
axum = "0.7"
reqwest = { version = "0.11", features = ["json"] }
tower-http = { version = "0.5", features = ["fs", "cors"] }
tower-cookies = "0.10"

# Others
lazy-regex = "3"
strum_macros = "0.25"
uuid = {version = "1", features = ["v4","fast-rng",]}
time = "0.3"
byteorder = "1.4"
thiserror = "1.0"