[package]
name = "tests"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.1"
reqwest = { version = "0.12.14", features = ["json"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tera = "1.20.0"
tokio = { version = "1.44.0", features = ["full"] }
tower-http = { version = "0.6.2", features = ["cors","fs"] }

[dev-dependencies]
anyhow = "1"
httpc-test = "0.1.1"

